syntax = "proto3";

package axion.deployment.v1;

import "buf/validate/validate.proto";
import "common/common.proto";
import "common/errors.proto";
import "google/protobuf/timestamp.proto";

enum DeploymentStatus {
  DEPLOYMENT_STATUS_UNSPECIFIED = 0;
  DEPLOYMENT_STATUS_PENDING = 1;
  DEPLOYMENT_STATUS_IN_PROGRESS = 2;
  DEPLOYMENT_STATUS_COMPLETED = 3;
  DEPLOYMENT_STATUS_FAILED = 4;
  DEPLOYMENT_STATUS_CANCELLED = 5;
}

message Deployment {
  string id = 1;
  string project_id = 2;
  string user_id = 3;
  DeploymentStatus status = 4;
  string environment = 5;
  int32 graph_version = 6;
  map<string, string> config = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
  google.protobuf.Timestamp completed_at = 10;
  string error_message = 11;
}

message CreateDeploymentRequest {
  axion.common.v1.RequestMetadata metadata = 1 [(buf.validate.field).required = true];
  
  string project_id = 2 [(buf.validate.field).string.uuid = true];
  
  string environment = 3 [
    (buf.validate.field).string.min_len = 1,
    (buf.validate.field).string.max_len = 50
  ];
  
  map<string, string> config = 4;
}

message CreateDeploymentResponse {
  oneof result {
    Deployment deployment = 1;
    axion.common.v1.Error error = 2;
  }
}

message GetDeploymentRequest {
  axion.common.v1.RequestMetadata metadata = 1 [(buf.validate.field).required = true];
  string deployment_id = 2 [(buf.validate.field).string.uuid = true];
}

message GetDeploymentResponse {
  oneof result {
    Deployment deployment = 1;
    axion.common.v1.Error error = 2;
  }
}

message ListDeploymentsRequest {
  axion.common.v1.RequestMetadata metadata = 1 [(buf.validate.field).required = true];
  string project_id = 2 [(buf.validate.field).string.uuid = true];
  axion.common.v1.Pagination pagination = 3;
}

message ListDeploymentsResponse {
  oneof result {
    DeploymentList deployments = 1;
    axion.common.v1.Error error = 2;
  }
}

message DeploymentList {
  repeated Deployment deployments = 1;
  axion.common.v1.Pagination pagination = 2;
}

message CancelDeploymentRequest {
  axion.common.v1.RequestMetadata metadata = 1 [(buf.validate.field).required = true];
  string deployment_id = 2 [(buf.validate.field).string.uuid = true];
}

message CancelDeploymentResponse {
  oneof result {
    Deployment deployment = 1;
    axion.common.v1.Error error = 2;
  }
}

